--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Vite + React</title>
 </head>
 
-<body class="">
+<body class="bg-slate-900 text-slate-100">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
